<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".infoUtenti.application.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="login"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRegInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Oppure effettua la "/>

        <Button
            android:id="@+id/btRegistrazione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="registrazione"/>

    </LinearLayout>

</RelativeLayout>