<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".infoUtenti.application.activity.ModificaCaratteristicheActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:text="Peso:"
                android:textSize="19sp"/>

            <EditText
                android:id="@+id/etPeso"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Peso" />

            <TextView
                android:id="@+id/tvKilogrammi"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:text="(in kg)"
                android:textSize="19sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAltezza"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content"
                android:text="Altezza:"
                android:textSize="19sp"/>

            <EditText
                android:id="@+id/etAltezza"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Altezza" />

            <TextView
                android:id="@+id/tvCentimetri"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:text="(in cm)"
                android:textSize="19sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEsperienza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Esperienza:"
                android:textSize="19sp"/>

            <Spinner
                android:id="@+id/spinnerEsperienza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumAllenamenti"
                android:layout_width="0dp"
                android:layout_weight="40"
                android:layout_height="wrap_content"
                android:text="Allenamenti:"
                android:textSize="19sp"/>

            <EditText
                android:id="@+id/etAllenamenti"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:digits="0123456789"
                />

            <TextView
                android:id="@+id/tvSettimana"
                android:layout_width="0dp"
                android:layout_weight="40"
                android:layout_height="wrap_content"
                android:text="(a settimana)"
                android:textSize="19sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SALVA"/>

        <Button
            android:id="@+id/btReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="INDIETRO"/>

    </LinearLayout>

</RelativeLayout>