<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="Home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/exercisesFragment"
        android:title="Esercizi"
        android:icon="@drawable/ic_exercises"/>

    <item
        android:id="@+id/profileFragment"
        android:title="Profilo"
        android:icon="@drawable/ic_profile"/>

</menu>