...
                android:id="@+id/btModificaInfo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="modifica info profilo"/>

            <Button
                android:id="@+id/btModificaCaratteristiche"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="inserisci/modifica caratteristiche"/>

            <Button
                android:id="@+id/btLogout"
...
