<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvselezionemodalita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seleziona gli esercizi che vuoi effettuare:"
            android:textColor="@color/purple_500"
            android:layout_gravity="center"
            android:textSize="18dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/eserciziLV"
                android:layout_width="400dp"
                android:layout_height="400dp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"></FrameLayout>

        <Button
            android:id="@+id/confermaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Continua"
            android:layout_gravity="center"
            android:onClick="conferma"
            android:layout_below="@id/layout"></Button>

    </LinearLayout>

</RelativeLayout>
