<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".gestioneScheda.application.activity.ExercisesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt1"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nuova Scheda Esercizi"/>

        <ListView
            android:id="@+id/lv1"
            android:layout_width="400dp"
            android:layout_height="600dp"
            android:layout_below="@id/bt1"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</FrameLayout>